# music-score-editor-prototype-pattern

./: .gitignore  README.md  design-patterns-prototype-demo.pyproject  mainwindow.py  music-score-editor-prototype-demo.pyproject  pyproject.toml  resources.qrc  resources_rc.py  setup.cfg  setup.py
docs/: diagrams.drawio
icons/: G-clef.txt  half_note.txt  staff.txt  whole_note.txt
src/: main.py  mainwindow.py  resources.qrc  resources_rc.py
src/app/: graphic.py  toolkit.py
src/components/: graphics_view.py
src/framework/: tool.py  tool_without_prototype.py
src/ui/: mainwindow.py  mainwindow.ui
src/views/: my_graphics_item_group.py  my_graphics_view.py  my_list_view.py  my_main_window.py
ui/: mainwindow.py  mainwindow.ui
