# References:
# - https://setuptools.pypa.io/en/latest/build_meta.html
# - https://www.scivision.dev/minimal-setup-py-with-prerequisites/

[metadata]
name = music_score_editor_prototype_pattern
author = Shawn Chang
description = A PySide2 implementation of the prototype pattern example
version = 0.0.1
url = https://github.com/sc420/music-score-editor-prototype-pattern

[options]
python_requires = >= 3.5
packages = find:
install_requires =
    PySide2
